syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.banzaicloud.hollowtrees.action";
option java_outer_classname = "ActionProto";

package action;

service Action {
  rpc HandleAlert(AlertEvent) returns (ActionResult) {}
}

message AlertEvent {
  string alertName = 1;
}

message ActionResult {
  string status = 1;
}